--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-datasets == 1.5
+# curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+
+
 packaging == 20.9
+datasets == 1.5
+torch  == 1.7.1
+adapter-transformers == 1.0.1
