--- a/parameters.ini
+++ b/parameters.ini
@@ -3,8 +3,8 @@ PathInput = data/
 PathOutput = output/
 PathModel = weights/
 AdapterSize = 500
+NumLabels = 100
 Patience = 3
 MaxEpoch = 10
+BatchSize = 32
 LearningRate = 1e-7
-
-
