network.py is in folder tree; main.py contains the pipeline to create/load the dataset, instance the model and train; datasets can be loaded and saved; some network parameters changed; adapter configurations introduced; baseClassifier created

--- a/parameters.ini
+++ b/parameters.ini
@@ -1,10 +1,23 @@
 [DEFAULT]
-PathInput = data/
+; PathInputTrain = /home/vmanuel/typing_network/data/3_types/train.json
+; PathInputDev = /home/vmanuel/typing_network/data/3_types/dev.json
+
+PathInputTrain = datasets/3_types_train.pkl
+PathInputDev = datasets/3_types_dev.pkl
+
 PathOutput = output/
 PathModel = weights/
-AdapterSize = 500
+AdapterConfig = Pfeiffer
+ReductionFactor = 16
+ClassificatorLayers = 2
 NumLabels = 100
 Patience = 3
 MaxEpoch = 10
 BatchSize = 32
-LearningRate = 1e-7
+LearningRate = 1e-4
+
+[BertClassifier]
+ReductionFactor = 0
+
+[Experiment_1]
+ReductionFactor = 2
