--- a/parameters.ini
+++ b/parameters.ini
@@ -2,8 +2,8 @@
 ; PathInputTrain = /home/vmanuel/typing_network/data/3_types/train.json
 ; PathInputDev = /home/vmanuel/typing_network/data/3_types/dev.json
 
-PathInputTrain = datasets/3_types_train.pkl
-PathInputDev = datasets/3_types_dev.pkl
+PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_train.pkl
+PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_dev.pkl
 
 PathOutput = output/
 PathModel = weights/
