--- a/parameters.ini
+++ b/parameters.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-; PathInputTrain = /home/vmanuel/typing_network/data/3_types/train.json
-; PathInputDev = /home/vmanuel/typing_network/data/3_types/dev.json
+PathInputTrain = /home/vmanuel/typing_network/data/3_types/train.json
+PathInputDev = /home/vmanuel/typing_network/data/3_types/dev.json
 
-PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_train.pkl
-PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_dev.pkl
+; PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_train.pkl
+; PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_dev.pkl
 
 PathOutput = output/
 PathModel = weights/
