prime prove senza adapters

--- a/parameters.ini
+++ b/parameters.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
 
-; PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_train.pkl
-; PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/3_types_dev.pkl
+PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/train_partitioned.json
+PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/dev_partitioned.json
 
 PathOutput = output/
 PathModel = weights/
@@ -13,7 +13,7 @@ ClassificatorLayers = 2
 NumLabels = 47
 Patience = 3
 MaxEpoch = 10
-BatchSize = 64
+BatchSize = 128
 LearningRate = 1e-4
 MaxContextSideSize = 1
 
@@ -22,3 +22,43 @@ ReductionFactor = 0
 
 [Experiment_1]
 ReductionFactor = 2
+
+[experiment_1]
+MaxContextSideSize = 1
+ReductionFactor = 0
+
+[experiment_2]
+MaxContextSideSize = 2
+ReductionFactor = 0
+
+[experiment_3]
+MaxContextSideSize = 3
+ReductionFactor = 0
+
+[experiment_4]
+MaxContextSideSize = 4
+ReductionFactor = 0
+
+[experiment_5]
+MaxContextSideSize = 5
+ReductionFactor = 0
+
+[experiment_6]
+MaxContextSideSize = 6
+ReductionFactor = 0
+
+[experiment_7]
+MaxContextSideSize = 7
+ReductionFactor = 0
+
+[experiment_8]
+MaxContextSideSize = 8
+ReductionFactor = 0
+
+[experiment_9]
+MaxContextSideSize = 9
+ReductionFactor = 0
+
+[experiment_10]
+MaxContextSideSize = 10
+ReductionFactor = 0
