added entity size paramenter

--- a/parameters.ini
+++ b/parameters.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
-; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+PathInputTrain = ../Data/FIGER/train_200k_v2.json
+PathInputDev = ../Data/FIGER/dev_partitioned.json
 
-PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/train_partitioned.json
-PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/dev_partitioned.json
+; PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/train_partitioned.json
+; PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/dev_partitioned.json
 
 PathOutput = output/
 PathModel = weights/
@@ -13,9 +13,11 @@ ClassificatorLayers = 2
 NumLabels = 47
 Patience = 3
 MaxEpoch = 10
-BatchSize = 128
+BatchSize = 512
 LearningRate = 1e-4
-MaxContextSideSize = 1
+MaxContextSideSize = 0
+MaxEntitySize = 1
+
 
 [BertClassifier]
 ReductionFactor = 0
@@ -24,41 +26,51 @@ ReductionFactor = 0
 ReductionFactor = 2
 
 [experiment_1]
-MaxContextSideSize = 1
+; MaxContextSideSize = 1
+MaxEntitySize = 1
 ReductionFactor = 0
 
 [experiment_2]
-MaxContextSideSize = 2
+; MaxContextSideSize = 2
+MaxEntitySize = 2
 ReductionFactor = 0
 
 [experiment_3]
-MaxContextSideSize = 3
+; MaxContextSideSize = 3
+MaxEntitySize = 3
 ReductionFactor = 0
 
 [experiment_4]
-MaxContextSideSize = 4
+; MaxContextSideSize = 4
+MaxEntitySize = 4
 ReductionFactor = 0
 
 [experiment_5]
-MaxContextSideSize = 5
+; MaxContextSideSize = 5
+MaxEntitySize = 5
 ReductionFactor = 0
 
 [experiment_6]
-MaxContextSideSize = 6
+; MaxContextSideSize = 6
+MaxEntitySize = 6
 ReductionFactor = 0
 
 [experiment_7]
-MaxContextSideSize = 7
+; MaxContextSideSize = 7
+MaxEntitySize = 7
 ReductionFactor = 0
 
 [experiment_8]
-MaxContextSideSize = 8
+; MaxContextSideSize = 8
+MaxEntitySize = 8
 ReductionFactor = 0
 
 [experiment_9]
-MaxContextSideSize = 9
+; MaxContextSideSize = 9
+MaxEntitySize = 9
 ReductionFactor = 0
 
 [experiment_10]
-MaxContextSideSize = 10
+; MaxContextSideSize = 10
+MaxEntitySize = 10
 ReductionFactor = 0
