--- a/parameters.ini
+++ b/parameters.ini
@@ -17,7 +17,7 @@ BatchSize = 512
 LearningRate = 1e-4
 MaxContextSideSize = 0
 MaxEntitySize = 1
-ExperimentName = 'DefaultName'
+ExperimentName = DefaultName
 
 [BertClassifier]
 ReductionFactor = 0
@@ -29,59 +29,59 @@ ReductionFactor = 2
 ; MaxContextSideSize = 1
 MaxEntitySize = 1
 ReductionFactor = 0
-ExperimentName = 'entitySize1'
+ExperimentName = entitySize1
 
 [experiment_2]
 ; MaxContextSideSize = 2
 MaxEntitySize = 2
 ReductionFactor = 0
-ExperimentName = 'entitySize2'
+ExperimentName = entitySize2
 
 
 [experiment_3]
 ; MaxContextSideSize = 3
 MaxEntitySize = 3
 ReductionFactor = 0
-ExperimentName = 'entitySize3'
+ExperimentName = entitySize3
 
 [experiment_4]
 ; MaxContextSideSize = 4
 MaxEntitySize = 4
 ReductionFactor = 0
-ExperimentName = 'entitySize4'
+ExperimentName = entitySize4
 
 [experiment_5]
 ; MaxContextSideSize = 5
 MaxEntitySize = 5
 ReductionFactor = 0
-ExperimentName = 'entitySize5'
+ExperimentName = entitySize5
 
 [experiment_6]
 ; MaxContextSideSize = 6
 MaxEntitySize = 6
 ReductionFactor = 0
-ExperimentName = 'entitySize6'
+ExperimentName = entitySize6
 
 [experiment_7]
 ; MaxContextSideSize = 7
 MaxEntitySize = 7
 ReductionFactor = 0
-ExperimentName = 'entitySize7'
+ExperimentName = entitySize7
 
 [experiment_8]
 ; MaxContextSideSize = 8
 MaxEntitySize = 8
 ReductionFactor = 0
-ExperimentName = 'entitySize8'
+ExperimentName = entitySize8
 
 [experiment_9]
 ; MaxContextSideSize = 9
 MaxEntitySize = 9
 ReductionFactor = 0
-ExperimentName = 'entitySize9'
+ExperimentName = entitySize9
 
 [experiment_10]
 ; MaxContextSideSize = 10
 MaxEntitySize = 10
 ReductionFactor = 0
-ExperimentName = 'entitySize10'
+ExperimentName = entitySize10
