added the parameter to drive the BertFineTuning and changed the input format

--- a/parameters.ini
+++ b/parameters.ini
@@ -2,8 +2,8 @@
 PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 
-; PathInputTrain = /home/fede/Documenti/adapter_on_entity_typing/datasets/train_partitioned.json
-; PathInputDev =   /home/fede/Documenti/adapter_on_entity_typing/datasets/dev_partitioned.json
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+; PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
 
 PathOutput = output/
 PathModel = weights/
@@ -16,8 +16,9 @@ MaxEpoch = 10
 BatchSize = 512
 LearningRate = 1e-4
 MaxContextSideSize = 0
-MaxEntitySize = 1
+MaxEntitySize = 11
 ExperimentName = DefaultName
+BertFineTuning = 1
 
 [BertClassifier]
 ReductionFactor = 0
@@ -25,63 +26,83 @@ ReductionFactor = 0
 [Experiment_1]
 ReductionFactor = 2
 
-[experiment_1]
-; MaxContextSideSize = 1
-MaxEntitySize = 1
+[experiment_0]
+MaxContextSideSize = 0
 ReductionFactor = 0
-ExperimentName = entitySize1
+ExperimentName = lastLayerOnlyMentionFIGER
+
+[experiment_1]
+MaxContextSideSize = 1
+ReductionFactor = 0
+ExperimentName = lastLayerContextSizeFIGER1
 
 [experiment_2]
-; MaxContextSideSize = 2
-MaxEntitySize = 2
+MaxContextSideSize = 2
 ReductionFactor = 0
-ExperimentName = entitySize2
-
+ExperimentName = lastLayerContextSizeFIGER2
 
 [experiment_3]
-; MaxContextSideSize = 3
-MaxEntitySize = 3
+MaxContextSideSize = 3
 ReductionFactor = 0
-ExperimentName = entitySize3
+ExperimentName = lastLayerContextSizeFIGER3
 
 [experiment_4]
-; MaxContextSideSize = 4
-MaxEntitySize = 4
+MaxContextSideSize = 4
 ReductionFactor = 0
-ExperimentName = entitySize4
+ExperimentName = lastLayerContextSizeFIGER4
 
 [experiment_5]
-; MaxContextSideSize = 5
-MaxEntitySize = 5
+MaxContextSideSize = 5
 ReductionFactor = 0
-ExperimentName = entitySize5
+ExperimentName = lastLayerContextSizeFIGER5
 
 [experiment_6]
-; MaxContextSideSize = 6
-MaxEntitySize = 6
+MaxContextSideSize = 6
 ReductionFactor = 0
-ExperimentName = entitySize6
+ExperimentName = lastLayerContextSizeFIGER6
 
 [experiment_7]
-; MaxContextSideSize = 7
-MaxEntitySize = 7
+MaxContextSideSize = 7
 ReductionFactor = 0
-ExperimentName = entitySize7
+ExperimentName = lastLayerContextSizeFIGER7
 
 [experiment_8]
-; MaxContextSideSize = 8
-MaxEntitySize = 8
+MaxContextSideSize = 8
 ReductionFactor = 0
-ExperimentName = entitySize8
+ExperimentName = lastLayerContextSizeFIGER8
 
 [experiment_9]
-; MaxContextSideSize = 9
-MaxEntitySize = 9
+MaxContextSideSize = 9
 ReductionFactor = 0
-ExperimentName = entitySize9
+ExperimentName = lastLayerContextSizeFIGER9
 
 [experiment_10]
-; MaxContextSideSize = 10
-MaxEntitySize = 10
+MaxContextSideSize = 10
 ReductionFactor = 0
-ExperimentName = entitySize10
+ExperimentName = lastLayerContextSizeFIGER10
+
+[experiment_11]
+MaxContextSideSize = 11
+ReductionFactor = 0
+ExperimentName = lastLayerContextSizeFIGER11
+
+[experiment_12]
+MaxContextSideSize = 12
+ReductionFactor = 0
+ExperimentName = lastLayerContextSizeFIGER12
+
+
+[experiment_13]
+MaxContextSideSize = 13
+ReductionFactor = 0
+ExperimentName = lastLayerContextSizeFIGER13
+
+[experiment_14]
+MaxContextSideSize = 14
+ReductionFactor = 0
+ExperimentName = lastLayerContextSizeFIGER14
+
+[experiment_15]
+MaxContextSideSize = 15
+ReductionFactor = 0
+ExperimentName = lastLayerContextSizeFIGER15
