added the support for datasets with different classes in train & dev

--- a/parameters.ini
+++ b/parameters.ini
@@ -1,6 +1,9 @@
 [DEFAULT]
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/crowd/dev_tree.json
 
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 ; PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
