--- a/parameters.ini
+++ b/parameters.ini
@@ -8,17 +8,22 @@ PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partit
 PathOutput = output/
 PathModel = weights/
 AdapterConfig = Pfeiffer
-ReductionFactor = 16
+; ReductionFactor = 16
+ReductionFactor = 0
 ClassificatorLayers = 2
 NumLabels = 47
 Patience = 3
 MaxEpoch = 10
-BatchSize = 512
+; BatchSize = 512
+BatchSize = 256
 LearningRate = 1e-4
-MaxContextSideSize = 0
+; MaxContextSideSize = 0
+MaxContextSideSize = 15
 MaxEntitySize = 11
 ExperimentName = DefaultName
-BertFineTuning = 1
+;; BertFineTuning = 1
+BertFineTuning = 0
+
 
 [BertClassifier]
 ReductionFactor = 0
@@ -106,3 +111,207 @@ ExperimentName = lastLayerContextSizeFIGER14
 MaxContextSideSize = 15
 ReductionFactor = 0
 ExperimentName = lastLayerContextSizeFIGER15
+
+
+
+;; Fede
+
+
+;; figer
+[bert_ft_0_figer]
+ExperimentName = bertFeatureExtraction_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+BertFineTuning = 0
+
+[bert_ft_1_figer]
+ExperimentName = bertFT1_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+BertFineTuning = 1
+
+[bert_ft_2_figer]
+ExperimentName = bertFT2_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+BertFineTuning = 2
+
+[adapter_1_figer]
+ExperimentName = adapters1_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+ReductionFactor = 1
+
+[adapter_2_figer]
+ExperimentName = adapters2_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+ReductionFactor = 2
+
+[adapter_4_figer]
+ExperimentName = adapters4_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+ReductionFactor = 4
+
+[adapter_8_figer]
+ExperimentName = adapters8_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+ReductionFactor = 8
+
+[adapter_16_figer]
+ExperimentName = adapters16_FIGER
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
+ReductionFactor = 16
+
+
+;;  BBN
+[bert_ft_0_bbn]
+ExperimentName = bertFeatureExtraction_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+BertFineTuning = 0
+
+[bert_ft_1_bbn]
+ExperimentName = bertFT1_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+BertFineTuning = 1
+
+[bert_ft_2_bbn]
+ExperimentName = bertFT2_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+BertFineTuning = 2
+
+[adapter_1_bbn]
+ExperimentName = adapters1_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+ReductionFactor = 1
+
+[adapter_2_bbn]
+ExperimentName = adapters2_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+ReductionFactor = 2
+
+[adapter_4_bbn]
+ExperimentName = adapters4_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+ReductionFactor = 4
+
+[adapter_8_bbn]
+ExperimentName = adapters8_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+ReductionFactor = 8
+
+[adapter_16_bbn]
+ExperimentName = adapters16_BBN
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
+PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
+ReductionFactor = 16
+
+
+;; OntoNotes
+[bert_ft_0_onto]
+ExperimentName = bertFeatureExtraction_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+BertFineTuning = 0
+
+[bert_ft_1_onto]
+ExperimentName = bertFT1_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotestg_rain_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+BertFineTuning = 1
+
+[bert_ft_2_onto]
+ExperimentName = bertFT2_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+BertFineTuning = 2
+
+[adapter_1_onto]
+ExperimentName = adapters1_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+ReductionFactor = 1
+
+[adapter_2_onto]
+ExperimentName = adapters2_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+ReductionFactor = 2
+
+[adapter_4_onto]
+ExperimentName = adapters4_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+ReductionFactor = 4
+
+[adapter_8_onto]
+ExperimentName = adapters8_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+ReductionFactor = 8
+
+[adapter_16_onto]
+ExperimentName = adapters16_OntoNotes
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_train_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/ontonotes/g_dev_tree.json
+ReductionFactor = 16
+
+
+;; Crowd
+[bert_ft_0_crowd]
+ExperimentName = bertFeatureExtraction_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+BertFineTuning = 0
+
+[bert_ft_1_crowd]
+ExperimentName = bertFT1_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+BertFineTuning = 1
+
+[bert_ft_2_crowd]
+ExperimentName = bertFT2_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+BertFineTuning = 2
+
+[adapter_1_crowd]
+ExperimentName = adapters1_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+ReductionFactor = 1
+
+[adapter_2_crowd]
+ExperimentName = adapters2_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+ReductionFactor = 2
+
+[adapter_4_crowd]
+ExperimentName = adapters4_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+ReductionFactor = 4
+
+[adapter_8_crowd]
+ExperimentName = adapters8_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+ReductionFactor = 8
+
+[adapter_16_crowd]
+ExperimentName = adapters16_crowd
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+ReductionFactor = 16
