added training on fixed batch number, change the computation of metrics, added prints for dataset preparation and and minor changes on dataset class

--- a/parameters.ini
+++ b/parameters.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 ; PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/crowd/dev_tree.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train_m_tree.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev_tree.json
 
 ; PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/train_partitioned.json
 ; PathInputDev =   /datahdd/vmanuel/entity_typing_all_datasets/data/BBN/BBN/dev_partitioned.json
@@ -11,20 +11,16 @@ PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_or
 PathOutput = output/
 PathModel = weights/
 AdapterConfig = Pfeiffer
-; ReductionFactor = 16
 ReductionFactor = 0
 ClassificatorLayers = 2
 NumLabels = 47
-Patience = 3
-MaxEpoch = 10
-; BatchSize = 512
-BatchSize = 256
+Patience = 5
+MaxEpoch = 100
+BatchSize = 512
 LearningRate = 1e-4
-; MaxContextSideSize = 0
 MaxContextSideSize = 15
 MaxEntitySize = 11
 ExperimentName = DefaultName
-;; BertFineTuning = 1
 BertFineTuning = 0
 
 
@@ -123,49 +119,49 @@ ExperimentName = lastLayerContextSizeFIGER15
 ;; figer
 [bert_ft_0_figer]
 ExperimentName = bertFeatureExtraction_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 BertFineTuning = 0
 
 [bert_ft_1_figer]
 ExperimentName = bertFT1_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 BertFineTuning = 1
 
 [bert_ft_2_figer]
 ExperimentName = bertFT2_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 BertFineTuning = 2
 
 [adapter_1_figer]
 ExperimentName = adapters1_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ReductionFactor = 1
 
 [adapter_2_figer]
 ExperimentName = adapters2_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ReductionFactor = 2
 
 [adapter_4_figer]
 ExperimentName = adapters4_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ReductionFactor = 4
 
 [adapter_8_figer]
 ExperimentName = adapters8_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ReductionFactor = 8
 
 [adapter_16_figer]
 ExperimentName = adapters16_FIGER
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_200k_v2.json
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/train_partitioned.json
 PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/FIGER/dev_partitioned.json
 ReductionFactor = 16
 
@@ -270,51 +266,51 @@ PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_or
 ReductionFactor = 16
 
 
-;; Crowd
-[bert_ft_0_crowd]
-ExperimentName = bertFeatureExtraction_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+;; choi
+[bert_ft_0_choi]
+ExperimentName = bertFeatureExtraction_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 BertFineTuning = 0
 
-[bert_ft_1_crowd]
-ExperimentName = bertFT1_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[bert_ft_1_choi]
+ExperimentName = bertFT1_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 BertFineTuning = 1
 
-[bert_ft_2_crowd]
-ExperimentName = bertFT2_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[bert_ft_2_choi]
+ExperimentName = bertFT2_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 BertFineTuning = 2
 
-[adapter_1_crowd]
-ExperimentName = adapters1_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[adapter_1_choi]
+ExperimentName = adapters1_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 ReductionFactor = 1
 
-[adapter_2_crowd]
-ExperimentName = adapters2_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[adapter_2_choi]
+ExperimentName = adapters2_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 ReductionFactor = 2
 
-[adapter_4_crowd]
-ExperimentName = adapters4_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[adapter_4_choi]
+ExperimentName = adapters4_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 ReductionFactor = 4
 
-[adapter_8_crowd]
-ExperimentName = adapters8_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[adapter_8_choi]
+ExperimentName = adapters8_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 ReductionFactor = 8
 
-[adapter_16_crowd]
-ExperimentName = adapters16_crowd
-PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/train_m_tree.json
-PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/crowd/dev_tree.json
+[adapter_16_choi]
+ExperimentName = adapters16_choi
+PathInputTrain = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/train.json
+PathInputDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/choi/dev.json
 ReductionFactor = 16
